// --- 1. Status Catalog ---
Table statuses {
  id bigint [pk]
  external_id uuid [not null, unique]
  entity_type varchar(100) [not null]
  code varchar(50) [not null]
  display_name varchar(100) [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Indexes {
    (entity_type, code) [unique]
  }
}

Table options {
  id bigint [pk]
  external_id uuid [not null, unique]
  option_group varchar(100) [not null]
  code varchar(80) [not null]
  display_name varchar(150) [not null]
  description text
  sort_order int [not null, default: 0]
  is_active boolean [not null, default: true]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Indexes {
    (option_group, code) [unique]
  }
}

// --- 2. Identity & Authentication ---
Table users {
  id bigint [pk]
  external_id uuid [not null, unique]
  cognito_sub uuid [unique, not null]
  email varchar [unique, not null]
  phone varchar [unique]
  role_id bigint [ref: > roles.id]
  status_id bigint [not null, ref: > statuses.id, note: "default: get_status_id('users', 'pending') — pasa a active tras aprobación y firma"]
  last_login_at timestamptz
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// --- 3. Access Control (RBAC) ---
Table roles {
  id bigint [pk]
  external_id uuid [not null, unique]
  name varchar(80) [not null, unique]
  description text
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table permissions {
  id bigint [pk]
  external_id uuid [not null, unique]
  code varchar(120) [not null, unique]
  description text
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table role_permissions {
  id bigint [pk]
  external_id uuid [not null, unique]
  role_id bigint [not null, ref: > roles.id]
  permission_id bigint [not null, ref: > permissions.id]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Indexes {
    (role_id, permission_id) [unique]
  }
}

// --- 4. Entities (Multi-country) ---
Table currencies {
  id bigint [pk]
  external_id uuid [not null, unique]
  code varchar(3) [not null, unique]
  name varchar(120) [not null]
  symbol varchar(10)
  decimal_places int [not null, default: 2]
  thousand_separator varchar(1)
  decimal_separator varchar(1)
  is_active boolean [not null, default: true]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table cities {
  id bigint [pk]
  external_id uuid [not null, unique]
  country_name varchar(120) [not null]
  country_code varchar(2) [not null]
  state_name varchar(120) [not null]
  state_code varchar(3)
  city_name varchar(120) [not null]
  currency_id bigint [not null, ref: > currencies.id]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Indexes {
    (country_code, state_name, city_name) [unique]
  }
}

Table persons {
  id bigint [pk]
  external_id uuid [not null, unique]
  user_id bigint [not null, ref: > users.id]
  country_code varchar(2)
  first_name varchar(255) [not null]
  last_name varchar(255) [not null]
  doc_type varchar(100) [not null]
  doc_number varchar [unique, not null]
  doc_issue_date date
  birth_date date
  gender varchar(20)
  phone varchar
  residential_address text
  business_address text
  city_id bigint [ref: > cities.id]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// Renombrada desde companies — cubre negocios PN y empresas formales PJ
Table businesses {
  id bigint [pk]
  external_id uuid [not null, unique]
  user_id bigint [not null, ref: > users.id]
  country_code varchar(2)
  city_id bigint [ref: > cities.id]

  // Discriminador PN / PJ
  entity_type varchar(10) [not null, note: "PN | PJ"]

  // Campos comunes PN y PJ
  business_name varchar(255) [note: "Nombre comercial del negocio. Principal para PN, complementario para PJ"]
  business_address text [note: "Dirección principal del negocio"]
  business_type varchar(10) [note: "Código CIIU — antes business_activity_code"]
  relationship_to_business varchar(100) [note: "Único dueño | Socio | Empleado | Familiar del dueño"]

  // Campos exclusivos de empresa formal (PJ) — null para PN
  legal_name varchar(255) [note: "Razón social. Requerido para PJ"]
  trade_name varchar(255) [note: "Nombre comercial formal. Opcional para PJ"]
  tax_id varchar(50) [unique, note: "NIT / RUT. Requerido para PJ"]
  year_of_establishment int [note: "Año de constitución legal. Relevante para PJ"]

  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// --- 5. Corporate Structure & Guarantors ---
Table legal_representatives {
  id bigint [pk]
  external_id uuid [not null, unique]
  business_id bigint [not null, ref: > businesses.id]
  person_id bigint [not null, ref: > persons.id]
  is_primary boolean [default: true]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table shareholders {
  id bigint [pk]
  external_id uuid [not null, unique]
  business_id bigint [not null, ref: > businesses.id]
  person_id bigint [not null, ref: > persons.id]
  ownership_percentage decimal(5,4)
  evaluation_order int
  credit_check_required boolean [default: false]
  credit_check_completed boolean [default: false]
  is_legal_representative boolean [default: false]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table guarantors {
  id bigint [pk]
  external_id uuid [not null, unique]
  credit_application_id bigint [not null, ref: > credit_applications_bnpl.id]
  person_id bigint [not null, ref: > persons.id]
  contract_signer_id bigint [ref: > contract_signers.id]
  guarantor_type varchar(20) [not null, note: "one of: personal, corporate, spousal, third_party"]
  relationship_to_applicant varchar(100)
  is_primary_guarantor boolean [default: false]
  selected_after_credit_check boolean [default: false]
  signature_url text
  signature_date timestamptz
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// --- 6. Partners & Product Categories ---
Table partners {
  id bigint [pk]
  external_id uuid [not null, unique]
  country_code varchar(2)
  company_name varchar(255) [not null]
  trade_name varchar(255)
  acronym varchar(10)
  logo_url text
  co_branding_logo_url text
  primary_color varchar(20)
  secondary_color varchar(20)
  light_color varchar(20)
  sales_rep_role_name varchar(50) [default: 'Sales Rep']
  sales_rep_role_name_plural varchar(50) [default: 'Sales Reps']
  api_key_hash varchar
  notification_email varchar
  webhook_url text
  send_sales_rep_voucher boolean [default: false]
  disbursement_notification_email varchar
  default_rep_id bigint [ref: > sales_representatives.id]
  default_category_id bigint [ref: > partner_categories.id]
  status_id bigint [not null, ref: > statuses.id, note: "default: get_status_id('partners', 'active')"]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table partner_categories {
  id bigint [pk]
  external_id uuid [not null, unique]
  partner_id bigint [not null, ref: > partners.id]
  name varchar(100) [not null]
  discount_percentage decimal(5,4) [not null]
  interest_rate decimal(5,4) [not null]
  disbursement_fee_percent decimal(5,4)
  minimum_disbursement_fee bigint
  delay_days int [not null]
  term_days int [not null]
  status_id bigint [not null, ref: > statuses.id, note: "default: get_status_id('partner_categories', 'active')"]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// --- 7. Credit Onboarding (BNPL Specific) & AI Analysis ---
Table credit_applications_bnpl {
  id bigint [pk]
  external_id uuid [not null, unique]
  user_id bigint [not null, ref: > users.id]
  user_product_id bigint [ref: > user_products.id]
  partner_id bigint [ref: > partners.id]
  partner_category_id bigint [ref: > partner_categories.id]
  sales_rep_id bigint [ref: > sales_representatives.id]

  // Referencia al negocio — reemplaza los campos movidos a businesses
  business_id bigint [ref: > businesses.id, note: "FK al negocio del solicitante"]

  // Datos del negocio al momento de la solicitud [A]
  number_of_locations int
  number_of_employees int
  business_seniority_id bigint [not null, ref: > options.id, note: "group: business_seniority, default: get_option_id('business_seniority', 'lt_1y')"]
  sector_experience varchar
  business_flagship_m2 int [note: "Tamaño en m² del local principal. Min: 1"]
  business_has_rent boolean [note: "Indica si arrienda el/los local(es) donde opera el negocio"]
  business_rent_amount bigint [note: "Valor mensual total de arriendos en COP. Condicional: solo si business_has_rent = true. Min: 100000"]

  // Datos financieros al momento de la solicitud [A]
  monthly_income bigint
  monthly_expenses bigint
  monthly_purchases bigint [note: "Condicional: solo si is_current_client = true"]
  current_purchases bigint [note: "Condicional: solo si is_current_client = false"]
  total_assets bigint
  requested_credit_line bigint
  is_current_client boolean [default: false]

  status_id bigint [not null, ref: > statuses.id, note: "default: get_status_id('credit_applications_bnpl', 'en_estudio')"]
  submission_date timestamptz
  approval_date timestamptz
  rejection_reason varchar(500)

  credit_study_date timestamptz
  credit_score decimal(8,2)
  credit_decision varchar
  approved_credit_line bigint
  analyst_report text
  risk_profile varchar

  privacy_policy_accepted boolean [default: false]
  privacy_policy_date timestamptz

  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table ai_agent_analysis {
  id bigint [pk]
  external_id uuid [not null, unique]
  application_id bigint [not null, ref: > credit_applications_bnpl.id]
  html_url_agent_analysis text
  json_agent_analysis jsonb
  agent_analysis_timestamptz timestamptz
  agent_recommended_loc bigint
  agent_recomendation bigint
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table sales_representatives {
  id bigint [pk]
  external_id uuid [not null, unique]
  partner_id bigint [not null, ref: > partners.id]
  user_id bigint [ref: > users.id]
  name varchar [not null]
  role varchar [not null]
  status_id bigint [not null, ref: > statuses.id, note: "default: get_status_id('sales_representatives', 'active')"]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// --- 8. Contracts & Signatures ---
Table contracts {
  id bigint [pk]
  external_id uuid [not null, unique]
  user_id bigint [not null, ref: > users.id]
  application_id bigint [ref: > credit_applications_bnpl.id]
  zapsign_token varchar [unique]
  status_id bigint [not null, ref: > statuses.id, note: "default: get_status_id('contracts', 'pending')"]
  original_file_url text
  signed_file_url text
  form_answers_json jsonb
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table contract_signers {
  id bigint [pk]
  external_id uuid [not null, unique]
  contract_id bigint [ref: > contracts.id]
  person_id bigint [ref: > persons.id]
  zapsign_signer_token varchar
  status_id bigint [not null, ref: > statuses.id, note: "default: get_status_id('contract_signers', 'pending')"]
  sign_url text
  ip_address varchar(45)
  geo_latitude varchar(20)
  geo_longitude varchar(20)
  signed_at timestamptz
  document_photo_url text
  document_verse_photo_url text
  selfie_photo_url text
  signature_image_url text
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// --- 9. Product Portfolio & Risk ---
Table user_products {
  id bigint [pk]
  external_id uuid [not null, unique]
  user_id bigint [not null, ref: > users.id]
  product_type varchar [not null]
  activated_at timestamptz [not null]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table product_bnpl {
  id bigint [pk]
  external_id uuid [not null, unique]
  user_product_id bigint [not null, unique, ref: > user_products.id]
  credit_limit bigint [not null]
  available_credit_limit bigint [not null]
  status_id bigint [not null, ref: > statuses.id, note: "default: get_status_id('product_bnpl', 'active')"]
  has_active_payment_plan boolean [default: false]
  notification_channels text[]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table bnpl_categories {
  id bigint [pk]
  external_id uuid [not null, unique]
  product_bnpl_id bigint [ref: > product_bnpl.id]
  category_id bigint [ref: > partner_categories.id]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table risk_profile {
  id bigint [pk]
  external_id uuid [not null, unique]
  user_id bigint [not null, ref: > users.id]
  user_product_id bigint [not null, ref: > user_products.id]
  risk_profile varchar
  collection_priority_score decimal(8,4)
  payment_probability_score decimal(8,4)
  internal_score decimal(8,2)
  hybrid_score decimal(8,2)
  risk_ai_reasoning text
  json_proyections jsonb
  json_weights jsonb
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// --- 10. Operational Data ---
Table documents {
  id bigint [pk]
  external_id uuid [not null, unique]
  person_id bigint [ref: > persons.id]
  business_id bigint [ref: > businesses.id]
  application_id bigint [ref: > credit_applications_bnpl.id]
  document_type varchar [not null]
  document_url text [not null]
  verification_status_id bigint [not null, ref: > statuses.id, note: "default: get_status_id('documents', 'pending')"]
  upload_date timestamptz [default: `now()`]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table credit_reports {
  id bigint [pk]
  external_id uuid [not null, unique]
  user_id bigint [not null, ref: > users.id]
  person_id bigint [ref: > persons.id]
  business_id bigint [ref: > businesses.id]
  application_id bigint [ref: > credit_applications_bnpl.id]
  report_date date [not null]
  bureau_name varchar
  full_report_json jsonb
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}
